Fix trivy image ref error (#28)
Extract first image tag as imageRef for Trivy as Trivy does not support
multiple image refs

---------

Co-authored-by: Raphael Strotz <Xzelsius@users.noreply.github.com>

--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -43,12 +43,20 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+      # As we use multiple registries, we need to extract the first tag from the meta output
+      - name: Extract trivy image-ref
+        id: extract
+        run: |
+          firstTag=$(jq --raw-output '.tags[0]' <<< '${{ steps.meta.outputs.json }}')
+          echo "Found $firstTag as first tag"
+          echo "imageRef=$firstTag" >> $GITHUB_OUTPUT
+
       # Scan Docker image (not for release builds since we will have multiple tags)
       - name: Scan Docker image
         if: github.event_name != 'release'
         uses: aquasecurity/trivy-action@1f0aa582c8c8f5f7639610d6d38baddfea4fdcee # 0.9.2
         with:
-          image-ref: ${{ steps.meta.outputs.tags }}
+          image-ref: ${{ steps.extract.outputs.imageRef }}
           format: 'sarif'
           output: 'trivy-results.sarif'
 
@@ -64,7 +72,7 @@ jobs:
         if: github.event_name == 'push'
         uses: aquasecurity/trivy-action@1f0aa582c8c8f5f7639610d6d38baddfea4fdcee # 0.9.2
         with:
-          image-ref: ${{ steps.meta.outputs.tags }}
+          image-ref: ${{ steps.extract.outputs.imageRef }}
           format: 'github'
           output: 'dependency-results.sbom.json'
           github-pat: ${{ secrets.gh-token }}
